<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:divider="@drawable/vertical_divider_xxl"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/margin_medium"
                    android:paddingVertical="@dimen/margin_small"
                    android:showDividers="middle">

                    <com.tatsutron.rimokon.component.ImageCard
                        android:id="@+id/artwork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/margin_large" />

                    <com.tatsutron.rimokon.component.MetadataCard
                        android:id="@+id/developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/developer" />

                    <com.tatsutron.rimokon.component.MetadataCard
                        android:id="@+id/publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/publisher" />

                    <com.tatsutron.rimokon.component.MetadataCard
                        android:id="@+id/region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/region" />

                    <com.tatsutron.rimokon.component.MetadataCard
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/release_date" />

                    <com.tatsutron.rimokon.component.MetadataCard
                        android:id="@+id/genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/genre" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="64dp" />

                </LinearLayout>

            </ScrollView>

        </FrameLayout>

    </LinearLayout>

    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
        android:id="@+id/speed_dial_overlay_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/speed_dial_overlay_background"
        app:clickable_overlay="true" />

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/speed_dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:sdMainFabClosedBackgroundColor="@color/button_background"
        app:sdMainFabClosedIconColor="@color/button_label"
        app:sdMainFabClosedSrc="@drawable/ic_plus"
        app:sdMainFabOpenedBackgroundColor="@color/button_background"
        app:sdOverlayLayout="@id/speed_dial_overlay_game" />

</FrameLayout>